feat: add binding skeletons and smoke tests